# legeclodb

./: .env  .env.production  .gitattributes  .gitignore  README.md  legeclodb.esproj  legeclodb.sln  package-lock.json  package.json  vue.config.js
public/: index.html  main_characters.json  main_consts.json  main_skills.json  support_characters.json
src/: App.vue  background.js  main.js  router.js
src/assets/: battle.json  constants.json  enemy_main_characters.json  enemy_support_characters.json  equipments.json  image_table.json  items.json  main_active.json  main_characters.json  main_passive.json  main_skills.json  main_talents.json  npc_main_characters.json  npc_support_characters.json  random_effect_table.json  schema_chr.json  schema_item.json  schema_skill.json  shape.json  support_active.json  support_characters.json  support_passive.json  support_skills.json
src/components/: About.vue  Battle.vue  Equipments.vue  Info.vue  Items.vue  Lookup.vue  MainCharacters.vue  Misc.vue  Navigation.vue  SupportCharacters.vue  common.js  style.css  utils.js
src/components/parts/: ChrSelector.vue  ItemPopovers.js  ItemPopovers.vue  ItemSelector.vue  MessageBoard.vue  SkillSelector.vue  UnitSelector.vue
src/components/simulator/: BattlePointSimulator.vue  CombinationBufSimulator.vue  DamageSimulator.vue  SelfBufSimulator.vue  StatusSimulator.vue  battle.js  battle_globals.js  battle_skill.js  battle_unit.js  lookup.css  lookup.js  simulation.js
tools/: build_image_table.py  build_sitemap.py  get_assets.py  get_masterdata.py  process_assets.py  process_master_csv.py  run_httpserver.bat
tools/FileServer/: index.cgi
tools/JsonServer/: index.cgi  test.html
tools/Unity/Assets/Editor/: FixTextureImportSettings.cs  (+1 more)
wasm/: CMakeLists.txt
wasm/src/: CMakeLists.txt  fixed_vector.h  ldb.cpp  ldb.h  lookup.cpp  lookup.h  task_feeder.cpp  task_feeder.h  test.cpp  types.h  util.h
wasm/src/flat_container/: fixed_vector.h  flat_container.natvis  flat_map.h  flat_set.h  memory.h  raw_vector.h  span.h  string.h  vector.h  vector_base.h
(+2 files in other folders)
